# langchain-notes

./: .env.example  .gitignore  README.md  content-map.md  pyproject.toml  pyproject.toml.old  readme.md
001-models and chat/: a_model_and_chat.py  message_visualizer.py
001-models and chat/more/: c_basic-agent.py
002-langgraph/: a_react_agent.py
cline-tasks/: cline_task_jan-16-2025_10-33-08-am.md
code/: create_files_from_json.py  datatypes_flow.py  extract_prompt_blocks.md  extract_prompt_blocks.py  model_selector.py  tasklist.md
code/document preparation/samples/: DevPortal API TDD _ Article.md
code/documents/: DevPortal API TDD _ BlogTag.md
code/prompts/: README.md  code_interface_writer.prompt.md  code_saver.prompt.md  doc_splitter.prompt.md  types_writer.prompt.md
databricks_notebook/: README.md
databricks_notebook/merchant_insights/: README.md  func_design_prompt.md
databricks_notebook/merchant_insights/api/: autodoc_notebook.py  message_printer.py  model_selector.py
databricks_notebook/merchant_insights/cline_prompts/: func_design_prompt.md
document_loader/: document_qa.py  document_qa_advanced.py  generate_pdf.py  process.md  rag_intro.md
hybridRAG/: Hybridsearch.py  markdown_parser.py
markdown_parser[wip]/: markdown_parser_qa.py
markdown_parser[wip]/docs/: J442_001_2023-ΧΟΡΗΓΗΣΗ ΠΡΟΪΟΝΤΟΣ PAYDAY LOAN ΜΕΣΩ INTERNET BANKING.docx  J442_001_2023-ΧΟΡΗΓΗΣΗ ΠΡΟΪΟΝΤΟΣ PAYDAY LOAN ΜΕΣΩ INTERNET BANKING.md
models and chat/: a_model_and_chat.py  a_model_and_chat_explained.md  b_templates_and_chains.md  b_templates_and_chains.py  c_basic-agent.py  compare_openai_anth.py  x_basic_model.py
rag_azureaisearch/: AzureSearchLocation.py  README.md  azure_search_manager.py  config.py  document_processor.py  main.py  rag_chain.py  roo_queries.md
system-prompts/: about.md  about2.md  anthropics_system_prompt.md  compare_openai_anth.py
test-coder/: validate_users.py
test-coder/data/: sample-users.json
test-coder/docs/: user-schema-documentation.md
test-coder/schemas/: user-schema.json
text-to-sql/google_spreadsheet_to_md/: .gitignore  README.md  analysis_to_markdown.py  csv_analyzer.py  csv_table_analyzer.py  csv_to_markdown.py  main.py  model_selector.py  process_tables_description.py  pyproject.toml  spreadsheets_downloader.py  table_analyzer.py  tool_creation.md
text-to-sql/google_spreadsheet_to_md/analysis/:  payment_org_analysis.json  deposit_trn_analysis.json  deposits_hist_analysis.json  ethnocredit_analysis.json  host_analysis.json  loan_agreement_legacy_analysis.json  mandate_trn_analysis.json  new operation id_analysis.json  operation mapping_analysis.json  operation_id_analysis.json  pay_instrument_analysis.json  payment_code_analysis.json  payment_dct_trn_analysis.json  reason_code_analysis.json  remittance_analysis.json  remittance_online_stream_analysis.json  remittance_stream_analysis.json  remittance_stream_creditor_analysis.json  remittance_stream_debtor_analysis.json  statement mapping_analysis.json  tables description_analysis.json  transfer_trn_analysis.json  Αντίγραφο του statement mapping_analysis.json  ενιαιο statement πληρωμών_analysis.json
text-to-sql/google_spreadsheet_to_md/csv_analysis/: __init__.py  column_analyzer.py  csv_analysis.py  file_operations.py  llm_analyzer.py
text-to-sql/google_spreadsheet_to_md/csv_analysis/processors/: __init__.py  database_processor.py  file_processor.py  table_metadata_processor.py  table_processor.py
text-to-sql/google_spreadsheet_to_md/sheets/: __init__.py  config.py  data_processor.py  file_manager.py  google_client.py  sheet_processor.py
tools-setup/: API_KEYs.md  README.md  poetry.md  python-setup-on-wsl.md  roocode-setup.md
web_search/: GoogleSearchAPI-keys.md  a_WebResearchRetriever.py  b_WebResearch_agent.py
