[tool.poetry]
name = "langchain-notes"
version = "0.1.0"
description = ""
authors = ["BikS <giorgos.marinos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-openai = "^0.2.14"
python-dotenv = "^1.0.1"
langchain-anthropic = "^0.3.1"
langchain-google-genai = "^2.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
