[tool.poetry]
name = "sheets-to-csv"
version = "0.1.0"
description = "Convert Google Sheets to CSV"
authors = ["ckifonidis@gmal.com"]
readme = "README.md"
packages = [{include = "sheets"}]

[tool.poetry.dependencies]
python = ">=3.9"
google-auth = "2.27.0"
google-auth-oauthlib = "1.2.0"
google-auth-httplib2 = "0.2.0"
google-api-python-client = "2.116.0"
pandas = "2.2.0"
python-dotenv = "1.0.1"
openai = "^1.65.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
